--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -950,7 +950,7 @@
                     this.token = localStorage.getItem('adminToken');
                     if (this.token) {
                         // Try a lightweight authenticated request to confirm token validity
-                        fetch('/api/admin/dashboard', {
+                        fetch('http://localhost:5000/api/admin/dashboard', {
                             headers: { 'Authorization': `Bearer ${this.token}` }
                         }).then(resp => {
                             if (resp.status === 401) {
@@ -974,7 +974,7 @@
                     this.error = '';
 
                     try {
-                        const response = await fetch('/api/admin/login', {
+                        const response = await fetch('http://localhost:5000/api/admin/login', {
                             method: 'POST',
                             headers: { 'Content-Type': 'application/json' },
                             body: JSON.stringify(this.credentials)
@@ -1018,7 +1018,7 @@
         async fetchDashboardStats() {
                     try {
                         // Fetch aggregated stats from backend admin dashboard
-                        const dashResp = await fetch('/api/admin/dashboard', {
+                        const dashResp = await fetch('http://localhost:5000/api/admin/dashboard', {
                             headers: { 'Authorization': `Bearer ${this.token}` }
                         });
 
@@ -1046,7 +1046,7 @@
 
                 async fetchPersonalInfo() {
                     try {
-                        const response = await fetch('/api/admin/personal-info', {
+                        const response = await fetch('http://localhost:5000/api/admin/personal-info', {
                             headers: { 'Authorization': `Bearer ${this.token}` }
                         });
                         if (response.status === 401) {
@@ -1064,7 +1064,7 @@
                 async updatePersonalInfo() {
                     this.loading = true;
                     try {
-                        const response = await fetch('/api/admin/personal-info', {
+                        const response = await fetch('http://localhost:5000/api/admin/personal-info', {
                             method: 'PUT',
                             headers: {
                                 'Content-Type': 'application/json',
@@ -1123,7 +1123,7 @@
                             }
                         }, 200);
 
-            const response = await fetch('/api/admin/upload/resume', {
+            const response = await fetch('http://localhost:5000/api/admin/upload/resume', {
                             method: 'POST',
                             headers: {
                 'Authorization': `Bearer ${this.token}`
@@ -1143,7 +1143,7 @@
                             this.personalInfo.resume_url = result.url;
                             // Immediately persist resume_url so it survives refresh
                             try {
-                                const saveResp = await fetch('/api/admin/personal-info', {
+                                const saveResp = await fetch('http://localhost:5000/api/admin/personal-info', {
                                     method: 'PUT',
                                     headers: {
                                         'Content-Type': 'application/json',
@@ -1190,8 +1190,8 @@
 
                 async fetchProjects() {
                     try {
-                        // Prefer admin endpoint (auth) for consistency
-                        const response = await fetch('/api/admin/projects', {
+                        // Use backend server URL
+                        const response = await fetch('http://localhost:5000/api/admin/projects', {
                             headers: { 'Authorization': `Bearer ${this.token}` }
                         });
                         if (response.status === 401) {
@@ -1203,7 +1203,7 @@
                             this.projects = Array.isArray(payload) ? payload : (payload?.data || []);
                         } else {
                             // Fallback to public endpoint if needed
-                            const pub = await fetch('/api/projects');
+                            const pub = await fetch('http://localhost:5000/api/projects');
                             if (pub.ok) {
                                 const payload = await pub.json();
                                 this.projects = Array.isArray(payload) ? payload : (payload?.data || []);
@@ -1238,8 +1238,8 @@
                 async saveProject() {
                     try {
                         const url = this.editingProject 
-                            ? `/api/admin/projects/${this.editingProject.id}`
-                            : '/api/admin/projects';
+                            ? `http://localhost:5000/api/admin/projects/${this.editingProject.id}`
+                            : 'http://localhost:5000/api/admin/projects';
                         
                         const method = this.editingProject ? 'PUT' : 'POST';
 
@@ -1281,7 +1281,7 @@
                 async deleteProject(id) {
                     if (confirm('Are you sure you want to delete this project?')) {
                         try {
-                            const response = await fetch(`/api/admin/projects/${id}`, {
+                            const response = await fetch(`http://localhost:5000/api/admin/projects/${id}`, {
                                 method: 'DELETE',
                                 headers: { 'Authorization': `Bearer ${this.token}` }
                             });
@@ -1303,7 +1303,7 @@
                 async fetchSkills() {
                     try {
                         // Use authenticated admin endpoint for skills
-                        const response = await fetch('/api/admin/skills', {
+                        const response = await fetch('http://localhost:5000/api/admin/skills', {
                             headers: { 'Authorization': `Bearer ${this.token}` }
                         });
                         if (response.status === 401) {
@@ -1316,7 +1316,7 @@
                             this.skills = this.sortSkills(list);
                         } else {
                             // Fallback to public endpoint
-                            const fallback = await fetch('/api/skills');
+                            const fallback = await fetch('http://localhost:5000/api/skills');
                             if (fallback.ok) {
                                 const payload = await fallback.json();
                                 const list = Array.isArray(payload) ? payload : (payload?.data || []);
@@ -1423,7 +1423,7 @@
                 async deleteSkill(id) {
                     if (confirm('Are you sure you want to delete this skill?')) {
                         try {
-                            const response = await fetch(`/api/admin/skills/${id}`, {
+                            const response = await fetch(`http://localhost:5000/api/admin/skills/${id}`, {
                                 method: 'DELETE',
                                 headers: { 'Authorization': `Bearer ${this.token}` }
                             });
@@ -1445,7 +1445,7 @@
                 // Experience Management
                 async fetchExperiences() {
                     try {
-                        const response = await fetch('/api/admin/experiences', {
+                        const response = await fetch('http://localhost:5000/api/admin/experiences', {
                             headers: { 'Authorization': `Bearer ${this.token}` }
                         });
 
@@ -1514,7 +1514,7 @@
                 async deleteExperience(id) {
                     if (confirm('Are you sure you want to delete this experience?')) {
                         try {
-                            const response = await fetch(`/api/admin/experiences/${id}`, {
+                            const response = await fetch(`http://localhost:5000/api/admin/experiences/${id}`, {
                                 method: 'DELETE',
                                 headers: { 'Authorization': `Bearer ${this.token}` }
                             });
@@ -1535,7 +1535,7 @@
 
         async fetchMessages() {
                     try {
-            const response = await fetch('/api/contact');
+            const response = await fetch('http://localhost:5000/api/contact');
 
                         if (response.ok) {
                             this.messages = await response.json();
@@ -1547,7 +1547,7 @@
 
                 async markAsRead(id) {
                     try {
-                        const response = await fetch(`/api/contact/${id}/status`, {
+                        const response = await fetch(`http://localhost:5000/api/contact/${id}/status`, {
                             method: 'PATCH',
                             headers: {
                                 'Content-Type': 'application/json'
