--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1203,12 +1203,23 @@
                             this.projects = Array.isArray(payload) ? payload : (payload?.data || []);
                         } else {
                             // Fallback to public endpoint if needed
+                            console.log('Admin endpoint failed, trying public endpoint...');
                             const pub = await fetch(`${LHOST}/api/projects`);
                             if (pub.ok) {
                                 const payload = await pub.json();
-                                this.projects = Array.isArray(payload) ? payload : (payload?.data || []);
+                                console.log('Public endpoint response:', payload);
+                                // Handle both array format and {data: array} format
+                                if (Array.isArray(payload)) {
+                                    this.projects = payload;
+                                } else if (payload && Array.isArray(payload.data)) {
+                                    this.projects = payload.data;
+                                } else {
+                                    console.error('Unexpected response format:', payload);
+                                    this.projects = [];
+                                }
                             }
                         }
+                        console.log('Final projects:', this.projects);
                     } catch (error) {
                         console.error('Error fetching projects:', error);
                     }
